--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,19 +1,23 @@
 project:
   type: website
 
-website:
+website: 
   title: "IS415-GA"
-  navbar:
-    left:
+  navbar: 
+    left: 
+      - text: "Hands-on Exercise"
+        menu: 
+          - text: "Hands-on Exercise 1"
+            href: "Hands-on-Ex/Hands-on_Ex01/Hands-on_Ex01.html"
+    right: 
       - href: index.qmd
         text: Home
       - about.qmd
 
 format:
   html:
-    theme: cosmo
+    theme: lux
     css: styles.css
     toc: true
 
 editor: visual
-
