--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,10 @@ website:
         menu: 
           - text: "Hands-on Exercise 1"
             href: "Hands-on_Exercise/Hands-on_Ex01/Hands-on_Ex01.html"
+      - text: "In-class Exercise"
+        menu: 
+          - text: "In-class Exercise 1"
+            href: "In-Class_Exercise/InClassEx01/InClassEx01.html"
     right: 
       - href: index.qmd
         text: Home
