--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,12 +11,44 @@ website:
             href: "Hands-on_Exercise/Hands-on_Ex01/Hands-on_Ex01.html"
           - text: "Hands-on Exercise 2"
             href: "Hands-on_Exercise/Hands-on_Ex02/Hands-on_Ex02.html"
+          - text: "Hands-on Exercise 3"
+            href: "Hands-on_Exercise/Hands-on_Ex03/Hands-on_Ex03.html"
+          - text: "Hands-on Exercise 4"
+            href: "Hands-on_Exercise/Hands-on_Ex04/Hands-on_Ex04.html"
+          - text: "Hands-on Exercise 5"
+            href: "Hands-on_Exercise/Hands-on_Ex05/Hands-on_Ex05.html"
+          - text: "Hands-on Exercise 6"
+            href: "Hands-on_Exercise/Hands-on_Ex06/Hands-on_Ex06.html"
+          - text: "Hands-on Exercise 7"
+            href: "Hands-on_Exercise/Hands-on_Ex07/Hands-on_Ex07.html"
+          - text: "Hands-on Exercise 8"
+            href: "Hands-on_Exercise/Hands-on_Ex08/Hands-on_Ex08.html"
+          - text: "Hands-on Exercise 9"
+            href: "Hands-on_Exercise/Hands-on_Ex09/Hands-on_Ex09.html"
+          - text: "Hands-on Exercise 10"
+            href: "Hands-on_Exercise/Hands-on_Ex10/Hands-on_Ex10.html"
       - text: "In-class Exercise"
         menu: 
           - text: "In-class Exercise 1"
             href: "In-Class_Exercise/InClassEx01/InClassEx01.html"
           - text: "In-class Exercise 2"
             href: "In-Class_Exercise/InClassEx02/InClassEx02.html"
+          - text: "In-class Exercise 3"
+            href: "In-Class_Exercise/InClassEx03/InClassEx03.html"
+          - text: "In-class Exercise 4"
+            href: "In-Class_Exercise/InClassEx04/InClassEx04.html"
+          - text: "In-class Exercise 5"
+            href: "In-Class_Exercise/InClassEx05/InClassEx05.html"
+          - text: "In-class Exercise 6"
+            href: "In-Class_Exercise/InClassEx06/InClassEx06.html"
+          - text: "In-class Exercise 7"
+            href: "In-Class_Exercise/InClassEx07/InClassEx07.html"
+          - text: "In-class Exercise 8"
+            href: "In-Class_Exercise/InClassEx08/InClassEx08.html"
+          - text: "In-class Exercise 9"
+            href: "In-Class_Exercise/InClassEx09/InClassEx09.html"
+          - text: "In-class Exercise 10"
+            href: "In-Class_Exercise/InClassEx10/InClassEx10.html"
     right: 
       - href: index.qmd
         text: Home
