--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,36 +7,17 @@ website:
     left: 
       - text: "Hands-on Exercise"
         menu: 
-          - text: "Chapter 1: Geospatial Data Science with R"
+          - text: "Hands-on Exercise 1: Geospatial Data Science with R"
             href: "Hands-on_Exercise/Hands-on_Ex01/Hands-on_Ex01.html"
-          - text: "Chapter 2: Thematic Mapping and GeoVisualisation with R"
+          - text: "Hands-on Exercise 2: Thematic Mapping and GeoVisualisation with R"
             href: "Hands-on_Exercise/Hands-on_Ex02/Hands-on_Ex02.html"
-          - text: "Chapter 4: 1st Order Spatial Point Patterns Analysis Methods"
+          - text: "Hands-on Exercise 3: 1st Order Spatial Point Patterns Analysis Methods"
             href: "Hands-on_Exercise/Hands-on_Ex03/Hands-on_Ex03a.html"
-          - text: "Chapter 5: 2nd Order Spatial Point Patterns Analysis Methods"
-            href: "Hands-on_Exercise/Hands-on_Ex03/Hands-on_Ex03b.html"
-          - text: "Chapter 7: Network Constrained Spatial Point Patterns Analysis"
+          - text: "Hands-on Exercise 4: Network Constrained Spatial Point Patterns Analysis"
             href: "Hands-on_Exercise/Hands-on_Ex04/Hands-on_Ex04.html"
-          - text: "Chapter 8: Spatial Weights and Applications"
+          - text: "Hands-on Exercise 5: Spatial Weights and Applications"
             href: "Hands-on_Exercise/Hands-on_Ex05/Hands-on_Ex05.html"
-          - text: "Chapter 9: Global Measures of Spatial Autocorrelation"
-            href: "Hands-on_Exercise/Hands-on_Ex05/Hands-on_Ex05a.html"
-          - text: "Chapter 10: Local Measures of Spatial Autocorrelation"
-            href: "Hands-on_Exercise/Hands-on_Ex05/Hands-on_Ex05b.html"
-          #- text: "Geographically Weighted PCA"
-            #href: "Hands-on_Exercise/Hands-on_Ex11/Hands-on_Ex11.html"
-          - text: "Chapter 12: Geographical Segmentation with Spatially Constrained Clustering Techniques"
-            href: "Hands-on_Exercise/Hands-on_Ex12/Hands-on_Ex12.html"
-          #- text: "Calibrating Hedonic Pricing Model for Private Highrise Property with GWR Method"
-            #href: "Hands-on_Exercise/Hands-on_Ex13/Hands-on_Ex13.html"
-          - text: "Chapter 14: Geographically Weighted Predictive Models"
-            href: "Hands-on_Exercise/Hands-on_Ex09/Hands-on_Ex09.html"
-          #- text: "Processing and Visualising Flow Data"
-            #href: "Hands-on_Exercise/Hands-on_Ex15/Hands-on_Ex15.html"
-          #- text: "Calibrating Spatial Interaction Models with R"
-            #href: "Hands-on_Exercise/Hands-on_Ex16/Hands-on_Ex16.html"
-          - text: "Chapter 17: Modelling Geographical Accessibility"
-            href: "Hands-on_Exercise/Hands-on_Ex10/Hands-on_Ex10.html"
+          
 
       - text: "In-class Exercise"
         menu: 
