Final Fix Hands-on Ex03

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,8 +11,8 @@ website:
             href: "Hands-on_Exercise/Hands-on_Ex01/Hands-on_Ex01.html"
           - text: "Hands-on Exercise 2: Thematic Mapping and GeoVisualisation with R"
             href: "Hands-on_Exercise/Hands-on_Ex02/Hands-on_Ex02.html"
-          - text: "Hands-on Exercise 3: 1st Order Spatial Point Patterns Analysis Methods"
-            href: "Hands-on_Exercise/Hands-on_Ex03/Hands-on_Ex03a.html"
+          - text: "Hands-on Exercise 3: 1st & 2nd Order Spatial Point Patterns Analysis Methods"
+            href: "Hands-on_Exercise/Hands-on_Ex03/Hands-on_Ex03.html"
           - text: "Hands-on Exercise 4: Network Constrained Spatial Point Patterns Analysis"
             href: "Hands-on_Exercise/Hands-on_Ex04/Hands-on_Ex04.html"
           - text: "Hands-on Exercise 5: Spatial Weights and Applications"
