--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,6 +17,16 @@ website:
             href: "In-Class_Exercise/InClassEx04/InClassEx04.html"
           - text: "Hands-on Exercise 5: Spatial Weights and Applications"
             href: "Hands-on_Exercise/Hands-on_Ex05/Hands-on_Ex05.html"
+          - text: "Hands-on Exercise 6: Global & Local Measures of Spatial Autocorrelation"
+            href: "Hands-on_Exercise/Hands-on_Ex06/Hands-on_Ex06.html"
+          - text: "Hands-on Exercise 7: "
+            href: "Hands-on_Exercise/Hands-on_Ex07/Hands-on_Ex07.html"
+          - text: "Hands-on Exercise 8: "
+            href: "Hands-on_Exercise/Hands-on_Ex08/Hands-on_Ex08.html"
+          - text: "Hands-on Exercise 9: "
+            href: "In-Class_Exercise/InClassEx09/InClassEx09.html"
+          - text: "Hands-on Exercise `10: "
+            href: "Hands-on_Exercise/Hands-on_Ex10/Hands-on_Ex10.html"
           
 
       - text: "In-class Exercise"
