Commit TakeHome and InClass07

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,7 +11,7 @@ website:
             href: "Hands-on_Exercise/Hands-on_Ex01/Hands-on_Ex01.html"
           - text: "Hands-on Exercise 2: Thematic Mapping and GeoVisualisation with R"
             href: "Hands-on_Exercise/Hands-on_Ex02/Hands-on_Ex02.html"
-          - text: "Hands-on Exercise 3: 1st & 2nd xOrder Spatial Point Patterns Analysis Methods"
+          - text: "Hands-on Exercise 3: 1st & 2nd Order Spatial Point Patterns Analysis Methods"
             href: "Hands-on_Exercise/Hands-on_Ex03/Hands-on_Ex03.html"
           - text: "Hands-on Exercise 4: Network Constrained Spatial Point Patterns Analysis"
             href: "In-Class_Exercise/InClassEx04/InClassEx04.html"
@@ -20,7 +20,7 @@ website:
           - text: "Hands-on Exercise 6: Global & Local Measures of Spatial Autocorrelation"
             href: "Hands-on_Exercise/Hands-on_Ex06/Hands-on_Ex06.html"
           - text: "Hands-on Exercise 7:"
-            href: "Hands-on_Exercise/Hands-on_Ex07/Hands-on_Ex07.html"
+            href: "https://jezeleii.shinyapps.io/GAShiny/"
           - text: "Hands-on Exercise 8: "
             href: "Hands-on_Exercise/Hands-on_Ex08/Hands-on_Ex08.html"
           - text: "Hands-on Exercise 9: "
@@ -44,7 +44,7 @@ website:
           - text: "In-class Exercise 6"
             href: "In-Class_Exercise/InClassEx06/InClassEx06.html"
           - text: "In-class Exercise 7"
-            href: "In-Class_Exercise/InClassEx07/InClassEx07.html"
+            href: "https://jezeleii.shinyapps.io/GAShiny/"
           - text: "In-class Exercise 8"
             href: "In-Class_Exercise/InClassEx08/InClassEx08.html"
           - text: "In-class Exercise 9"
